Add reset button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
             background-color: #f4f4f9;
             color: #333;
         }
-
         input, button {
             padding: 10px;
             margin-top: 10px;
@@ -22,21 +21,25 @@
             border: 1px solid #ccc;
             border-radius: 4px;
         }
-
         button {
             background-color: #4CAF50;
             color: white;
             cursor: pointer;
             transition: background 0.3s ease;
         }
-
         button:hover {
             background-color: #45a049;
         }
-
         .result {
             margin-top: 20px;
             font-size: 18px;
+        }
+        /* A little extra style for the Reset button */
+        .reset-btn {
+            background-color: #ff5722; /* Different color to stand out */
+        }
+        .reset-btn:hover {
+            background-color: #e64a19;
         }
     </style>
 </head>
@@ -47,6 +50,8 @@
     <input type="number" id="fahrenheit" placeholder="Enter Fahrenheit" />
 
     <button onclick="convertTemperature()">Convert</button>
+    <!-- *** New Reset Button *** -->
+    <button class="reset-btn" onclick="resetFields()">Reset</button>
 
     <div class="result">
         <p>Celsius: <span id="celsius">--</span></p>
@@ -55,22 +60,25 @@
 
     <script>
         function convertTemperature() {
-            // Get the input value
             let fahrenheit = document.getElementById('fahrenheit').value;
 
-            // Check if the value is a valid number
             if (isNaN(fahrenheit) || fahrenheit === "") {
                 alert("Please enter a valid number");
                 return;
             }
 
-            // Convert to Celsius and Kelvin
             let celsius = ((fahrenheit - 32) * 5) / 9;
             let kelvin = celsius + 273.15;
 
-            // Update the result in the HTML
             document.getElementById('celsius').textContent = celsius.toFixed(2);
             document.getElementById('kelvin').textContent = kelvin.toFixed(2);
+        }
+
+        // *** New Reset Function ***
+        function resetFields() {
+            document.getElementById('fahrenheit').value = "";
+            document.getElementById('celsius').textContent = "--";
+            document.getElementById('kelvin').textContent = "--";
         }
     </script>
 
